optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_merge_on_input_and_bind_checked.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
  const localValue = useSignal(false);

  return (
    <input
      bind:checked={localValue}
      onInput$={() => {
        console.log("test");
      }}
    />
  );
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_V4XAtJSTRKg = ()=>import("./test.tsx_FieldInput_component_V4XAtJSTRKg");
export const FieldInput = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_V4XAtJSTRKg, "FieldInput_component_V4XAtJSTRKg"));


None
============================= test.tsx_FieldInput_component_V4XAtJSTRKg.js (ENTRY POINT)==

import { _jsxSorted, qrl, useSignal } from "@qwik.dev/core";
const i_onInput = ()=>import("./test.tsx");
export const FieldInput_component_V4XAtJSTRKg = ()=>{
	const localValue = useSignal(false);
	return /*#__PURE__*/ _jsxSorted("input", { "on:input": /*#__PURE__*/ qrl(i_onInput, "FieldInput_component_input_onInput") }, {
		checked: localValue,
		"on:input": inlinedQrl(_chk, "_chk", [localValue])
	}, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_V4XAtJSTRKg",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "V4XAtJSTRKg",
  "canonicalFilename": "test.tsx_FieldInput_component_V4XAtJSTRKg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    94,
    271
  ]
}
*/
== DIAGNOSTICS ==

[]
