optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_move_bind_value_to_var_props.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from "@qwik.dev/core";
import { destructureBindings } from "./destructure-bindings";

export const FieldInput = component$(
  (props) => {
    const initialValues = { value: undefined as string | undefined };
    const rest = destructureBindings(props, initialValues);

    return (
      <input
        {...rest}
        bind:value={finalValue}
		onClick$={() => {
			console.log('clicked');
		}}
      />
    );
  }
);

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_O84bGdeej0g = ()=>import("./test.tsx_FieldInput_component_O84bGdeej0g");
export const FieldInput = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_O84bGdeej0g, "FieldInput_component_O84bGdeej0g"));


None
============================= test.tsx_FieldInput_component_O84bGdeej0g.js (ENTRY POINT)==

import { destructureBindings } from "./destructure-bindings";
import { _getConstProps, _getVarProps, _jsxSplit, qrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./test.tsx");
export const FieldInput_component_O84bGdeej0g = (props)=>{
	const initialValues = { value: undefined };
	const rest = destructureBindings(props, initialValues);
	return /*#__PURE__*/ _jsxSplit("input", {
		..._getVarProps(rest),
		on:click: /*#__PURE__*/ qrl(i_onClick, "FieldInput_component_input_onClick")
	}, _getConstProps(rest), null, 0, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_O84bGdeej0g",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "O84bGdeej0g",
  "canonicalFilename": "test.tsx_FieldInput_component_O84bGdeej0g",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    162,
    453
  ]
}
*/
== DIAGNOSTICS ==

[]
