optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_move_props_related_to_iteration_variables_to_var_props.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from "@qwik.dev/core";
import { TestComponent } from "./testComponent";

export const Child = component$(() => {
  const propCounterWithNested = useSignal(() => {
  return {
      data: [
        { attributeInArray: { counter: globalThis.propsCounter++ } },
        { attributeInArray: { counter: globalThis.propsCounter } },
      ],
    };
  })
  return (
    <div>
        {propCounterWithNested.value.data.map((item, index) => {
          return (
            <TestComponent
              counter={item.attributeInArray.counter}
              logString="Nested read through array"
              key={index}
            />
          );
        })}
    </div>
  );
})

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_9GyF01GDKqw = ()=>import("./test.tsx_Child_component_9GyF01GDKqw");
export const Child = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_9GyF01GDKqw, "Child_component_9GyF01GDKqw"));


None
============================= test.tsx_Child_component_9GyF01GDKqw.js (ENTRY POINT)==

import { TestComponent } from "./testComponent";
import { _fnSignal, _jsxSorted, useSignal } from "@qwik.dev/core";
const _hf0 = (p0, p1)=>p0.attributeInArray.counter;
const _hf0_str = "p0.attributeInArray.counter";
export const Child_component_9GyF01GDKqw = ()=>{
	const propCounterWithNested = useSignal(()=>{
		return { data: [{ attributeInArray: { counter: globalThis.propsCounter++ } }, { attributeInArray: { counter: globalThis.propsCounter } }] };
	});
	return /*#__PURE__*/ _jsxSorted("div", null, null, propCounterWithNested.value.data.map((item, index)=>{
		return _jsxSorted(TestComponent, { counter: _fnSignal(_hf0, [item, index], _hf0_str) }, { logString: "Nested read through array" }, null, 3, index);
	}), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Child_component_9GyF01GDKqw",
  "entry": null,
  "displayName": "test.tsx_Child_component",
  "hash": "9GyF01GDKqw",
  "canonicalFilename": "test.tsx_Child_component_9GyF01GDKqw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    138,
    701
  ]
}
*/
== DIAGNOSTICS ==

[]
