optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_not_generate_conflicting_props_identifiers.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useComputed$, useTask$ } from '@qwik.dev/core'

export default component$(({ color, ...props }) => {
useComputed$(() => color)

useTask$(() => {
	props.checked
})

return 'hi'
})

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_PYU291PvidQ = ()=>import("./test.tsx_test_component_useComputed_PYU291PvidQ");
const i_jewzFYh3XmQ = ()=>import("./test.tsx_test_component_useTask_jewzFYh3XmQ");
const i_LUXeXe0DQrg = ()=>import("./test.tsx_test_component_LUXeXe0DQrg");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"));


None
============================= test.tsx_test_component_useTask_jewzFYh3XmQ.js (ENTRY POINT)==

export const test_component_useTask_jewzFYh3XmQ = ()=>{
	props.checked;
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_useTask_jewzFYh3XmQ",
  "entry": "entry_segments",
  "displayName": "test.tsx_test_component_useTask",
  "hash": "jewzFYh3XmQ",
  "canonicalFilename": "test.tsx_test_component_useTask_jewzFYh3XmQ",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    158,
    182
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { qrl, useComputedQrl, useTaskQrl } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = ({ color, ...props })=>{
	/*#__PURE__*/ useComputedQrl(/*#__PURE__*/ qrl(i_PYU291PvidQ, "test_component_useComputed_PYU291PvidQ"));
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_jewzFYh3XmQ, "test_component_useTask_jewzFYh3XmQ"));
	return "hi";
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": "entry_segments",
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    95,
    198
  ]
}
*/
============================= test.tsx_test_component_useComputed_PYU291PvidQ.js (ENTRY POINT)==

export const test_component_useComputed_PYU291PvidQ = ()=>color;


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_useComputed_PYU291PvidQ",
  "entry": "entry_segments",
  "displayName": "test.tsx_test_component_useComputed",
  "hash": "PYU291PvidQ",
  "canonicalFilename": "test.tsx_test_component_useComputed_PYU291PvidQ",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useComputed$",
  "captures": false,
  "loc": [
    135,
    146
  ]
}
*/
== DIAGNOSTICS ==

[]
