optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_not_move_over_side_effects.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

export const \$promoteToRoot$ = (ref: SeenRef) => {
	const path = \$getObjectPath$(ref) as string;
	// should stay before the push
	const idx = roots.length;
	roots.push(new BackRef(path));
	ref.\$parent$ = null;
	ref.\$index$ = idx;
	return idx;
};

============================= test.js ==

import { getObjectPathQrl, qrl } from "@qwik.dev/core";
const i_ytJZPsFrXms = ()=>import("./test.tsx_promoteToRoot_path_getObjectPath_ytJZPsFrXms");
export const promoteToRoot$ = (ref)=>{
	const path = /*#__PURE__*/ getObjectPathQrl(/*#__PURE__*/ qrl(i_ytJZPsFrXms, "promoteToRoot_path_getObjectPath_ytJZPsFrXms", [ref]));
	// should stay before the push
	const idx = roots.length;
	roots.push(new BackRef(path));
	ref.parent$ = null;
	ref.index$ = idx;
	return idx;
};


None
============================= test.tsx_promoteToRoot_path_getObjectPath_ytJZPsFrXms.js (ENTRY POINT)==

export const promoteToRoot_path_getObjectPath_ytJZPsFrXms = ref;


None
/*
{
  "origin": "test.tsx",
  "name": "promoteToRoot_path_getObjectPath_ytJZPsFrXms",
  "entry": null,
  "displayName": "test.tsx_promoteToRoot_path_getObjectPath",
  "hash": "ytJZPsFrXms",
  "canonicalFilename": "test.tsx_promoteToRoot_path_getObjectPath_ytJZPsFrXms",
  "path": "",
  "extension": "js",
  "parent": "promoteToRoot",
  "ctxKind": "function",
  "ctxName": "getObjectPath$",
  "captures": true,
  "loc": [
    83,
    86
  ]
}
*/
== DIAGNOSTICS ==

[]
