optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_not_transform_bind_value_in_var_props_for_jsx_split.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$((props) => {
	const input = useSignal("");

  return (
		<>
			{/* var props */}
			<input
				bind:value={input}
				{...props}
			/>
			{/* const props */}
			<input
				{...props}
				bind:value={input}
			/>
		</>
  );
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_O84bGdeej0g = ()=>import("./test.tsx_FieldInput_component_O84bGdeej0g");
export const FieldInput = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_O84bGdeej0g, "FieldInput_component_O84bGdeej0g"));


None
============================= test.tsx_FieldInput_component_O84bGdeej0g.js (ENTRY POINT)==

import { _getConstProps, _getVarProps, _jsxSorted, _jsxSplit, useSignal } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const FieldInput_component_O84bGdeej0g = (props)=>{
	const input = useSignal("");
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [/*#__PURE__*/ _jsxSplit("input", {
		value: input,
		on:input: inlinedQrl(_val, "_val", [input]),
		..._getVarProps(props)
	}, _getConstProps(props), null, 0, null), /*#__PURE__*/ _jsxSplit("input", { ..._getVarProps(props) }, _getConstProps(props), null, 0, null)], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_O84bGdeej0g",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "O84bGdeej0g",
  "canonicalFilename": "test.tsx_FieldInput_component_O84bGdeej0g",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    97,
    321
  ]
}
*/
== DIAGNOSTICS ==

[]
