optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_not_transform_events_on_non_elements.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $ } from '@qwik.dev/core';
import { CustomComponent } from './custom-component';
import { AnotherComponent } from './another-component';

export const Greeter = component$(() => {
	return (
		<div>
			<CustomComponent onClick$={() => {}}/>
			{array.map(item => (
				<AnotherComponent onClick$={() => {}}/>
			))}
		</div>
	)
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_l5Al0251s9w = ()=>import("./test.tsx_test.tsx_Greeter_component_l5Al0251s9w");
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_l5Al0251s9w, "test.tsx_Greeter_component_l5Al0251s9w"));


None
============================= test.tsx_test.tsx_Greeter_component_div_map_AnotherComponent_onClick_98y8vOI284I.tsx (ENTRY POINT)==

export const test.tsx_Greeter_component_div_map_AnotherComponent_onClick_98y8vOI284I = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Greeter_component_div_map_AnotherComponent_onClick_98y8vOI284I",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_map_AnotherComponent_onClick",
  "hash": "98y8vOI284I",
  "canonicalFilename": "test.tsx_test.tsx_Greeter_component_div_map_AnotherComponent_onClick_98y8vOI284I",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_test.tsx_Greeter_component_l5Al0251s9w.tsx (ENTRY POINT)==

import { AnotherComponent } from "./another-component";
import { CustomComponent } from "./custom-component";
import { qrl } from "@qwik.dev/core";
const i_98y8vOI284I = ()=>import("./test.tsx_test.tsx_Greeter_component_div_map_AnotherComponent_onClick_98y8vOI284I");
const i_onClick = ()=>import("./test.tsx");
export const test.tsx_Greeter_component_l5Al0251s9w = ()=>{
	return <div>
			<CustomComponent onClick$={/*#__PURE__*/ qrl(i_onClick, "Greeter_component_div_CustomComponent_onClick")} />
			{array.map((item)=><AnotherComponent onClick$={/*#__PURE__*/ qrl(i_98y8vOI284I, "test.tsx_Greeter_component_div_map_AnotherComponent_onClick_98y8vOI284I")} />)}
		</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Greeter_component_l5Al0251s9w",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "l5Al0251s9w",
  "canonicalFilename": "test.tsx_test.tsx_Greeter_component_l5Al0251s9w",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    193,
    349
  ]
}
*/
== DIAGNOSTICS ==

[]
