optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_not_wrap_fn.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from "@qwik.dev/core";
import { A } from "./componentA";

export const Cmp = component$(() => {
	const currentStep = useSignal('STEP_1');
	const currentType = useSignal<'NEXT' | 'PREVIOUS'>('PREVIOUS');

	const getStep = (step: string, type: 'NEXT' | 'PREVIOUS') => {
		return step === 'STEP_1' ? 'STEP_2' : 'STEP_1';
	};

	return (
		<>
			<button onClick$={() => (currentType.value = 'NEXT')}>CLICK</button>
			<A href={getStep(currentStep.value, currentType.value)} />
		</>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_4ryKJTOKjWE = ()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE");
export const Cmp = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_4ryKJTOKjWE, "Cmp_component_4ryKJTOKjWE"));


None
============================= test.tsx_Cmp_component_4ryKJTOKjWE.js (ENTRY POINT)==

import { A } from "./componentA";
import { _jsxSorted, qrl, useSignal } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
const i_onClick = ()=>import("./test.tsx");
export const Cmp_component_4ryKJTOKjWE = ()=>{
	const currentStep = useSignal("STEP_1");
	const currentType = useSignal("PREVIOUS");
	const getStep = (step, type)=>{
		return step === "STEP_1" ? "STEP_2" : "STEP_1";
	};
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [/*#__PURE__*/ _jsxSorted("button", { "on:click": /*#__PURE__*/ qrl(i_onClick, "Cmp_component_button_onClick", [currentType]) }, null, "CLICK", 3, null), _jsxSorted(A, { href: getStep(currentStep.value, currentType.value) }, null, null, 3, null)], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    121,
    516
  ]
}
*/
== DIAGNOSTICS ==

[]
