optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_not_wrap_ternary_function_operator_with_fn.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from '@qwik.dev/core';


export default component$(() => {
const toggle = useSignal(true);
const t = (key: string) => key;
return (
	<button
		type="button"
		title={
		toggle.value !== ''
			? t('app.message.exists@@there is a message for you')
			: t('app.message.not_exists@@click to get a message!')
		}
	></button>
);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_G7jVUwdBFEM = ()=>import("./test.tsx_test.tsx_component_G7jVUwdBFEM");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "test.tsx_component_G7jVUwdBFEM"));


None
============================= test.tsx_test.tsx_component_G7jVUwdBFEM.js (ENTRY POINT)==

import { _jsxSorted, useSignal } from "@qwik.dev/core";
export const test.tsx_component_G7jVUwdBFEM = ()=>{
	const toggle = useSignal(true);
	const t = (key)=>key;
	return /*#__PURE__*/ _jsxSorted("button", { title: toggle.value !== "" ? t("app.message.exists@@there is a message for you") : t("app.message.not_exists@@click to get a message!") }, { type: "button" }, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_component_G7jVUwdBFEM",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "G7jVUwdBFEM",
  "canonicalFilename": "test.tsx_test.tsx_component_G7jVUwdBFEM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    84,
    357
  ]
}
*/
== DIAGNOSTICS ==

[]
