optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_not_wrap_var_template_string.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useComputed$ } from '@qwik.dev/core';
import { inlineTranslate } from 'translate-lib';

export default component$(() => {
	const t = inlineTranslate();

	const productTitle = useComputed$(() => {
		return 'Test title';
	});

	return (
		<img 
			attr={t('home.imageAlt.founded-product:')}
			alt={`${t('home.imageAlt.founded-product:')} ${productTitle.value}`} />
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_alS0NBRJkYk = ()=>import("./test.tsx_component_productTitle_useComputed_alS0NBRJkYk");
const i_G7jVUwdBFEM = ()=>import("./test.tsx_component_G7jVUwdBFEM");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "component_G7jVUwdBFEM"));


None
============================= test.tsx_component_G7jVUwdBFEM.js (ENTRY POINT)==

import { _jsxSorted, qrl, useComputedQrl } from "@qwik.dev/core";
import { inlineTranslate } from "translate-lib";
const i_alS0NBRJkYk = ()=>import("./test.tsx_component_productTitle_useComputed_alS0NBRJkYk");
export const component_G7jVUwdBFEM = ()=>{
	const t = inlineTranslate();
	const productTitle = /*#__PURE__*/ useComputedQrl(/*#__PURE__*/ qrl(i_alS0NBRJkYk, "component_productTitle_useComputed_alS0NBRJkYk"));
	return /*#__PURE__*/ _jsxSorted("img", {
		attr: t("home.imageAlt.founded-product:"),
		alt: `${t("home.imageAlt.founded-product:")} ${productTitle.value}`
	}, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_G7jVUwdBFEM",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "G7jVUwdBFEM",
  "canonicalFilename": "test.tsx_component_G7jVUwdBFEM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    135,
    390
  ]
}
*/
============================= test.tsx_component_productTitle_useComputed_alS0NBRJkYk.js (ENTRY POINT)==

export const component_productTitle_useComputed_alS0NBRJkYk = ()=>{
	return "Test title";
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_productTitle_useComputed_alS0NBRJkYk",
  "entry": null,
  "displayName": "test.tsx_component_productTitle_useComputed",
  "hash": "alS0NBRJkYk",
  "canonicalFilename": "test.tsx_component_productTitle_useComputed_alS0NBRJkYk",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useComputed$",
  "captures": false,
  "loc": [
    209,
    242
  ]
}
*/
== DIAGNOSTICS ==

[]
